--- a/css/style.css
+++ b/css/style.css
@@ -238,18 +238,17 @@ td:nth-of-type(even) {
 /* -------------------------------------------------------------- 
 /* =Gallery
 -------------------------------------------------------------- */
-
-.example-image {
-  width: 170px;
-  margin: 0;
-  display: inline-block;
-  margin-bottom: 20px;
-  margin-right: 20px;
+.grid-sizer,
+.grid-item {
+    width: 40%;
+    margin-bottom: 10%;
+    margin-right: 5%;
+    margin-left: 5%;
+    border: 0px solid red;
 }
-
 .example-image-link {
   text-decoration: none;
-    border-bottom: 0px; !important
+  border-bottom: 0px; !important
 }
 
 .example-image-link:nth-of-type(4n+0) {
